Fix contrast body text for dark mode.

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,7 +16,7 @@
     @apply font-semibold text-2xl md:text-[28px] leading-9 text-foreground;
   }
   p {
-    @apply opacity-70 dark:opacity-60;
+    @apply opacity-70;
   }
   :root {
     --background: 0 0% 100%;
